# GBOxide

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
src/: cartridge.rs  cli.yaml  lib.rs  main.rs
src/gameboy/: cpu.rs  interrupt.rs  joypad.rs  lcd.rs  mmu.rs  mod.rs  registers.rs  timer.rs
src/gui/: mod.rs
src/utils/: string.rs
