[package]
name = "gboxide"
version = "0.1.0"
description = "A GameBoy Emulator written in Rust"
authors = ["StarlitGhost <gboxide@starlitghost.xyz>"]
edition = "2018"

[dependencies]
bitfield = "0.13.2"
bitflags = "1.2.1"
byteorder = "1.3.2"
clap = "2.33"
num-derive = "0.3"
num-traits = "0.2"
png = "0.15.0"
pixels = { git = "https://github.com/parasyte/pixels", rev = "cc04f14a3dd5bf2d35bcd2427931f0507311ba1e" }
imgui-wgpu = "0.1.0"
winit = "0.20.0-alpha4"
winit_input_helper = "0.4.0-alpha4"