[package]
name = "gboxide"
version = "0.2.1"
description = "A GameBoy Emulator written in Rust"
authors = ["StarlitGhost <gboxide@starlitghost.xyz>"]
edition = "2018"
repository = "https://github.com/StarlitGhost/GBOxide"
readme = "README.md"
keywords = ["gameboy", "dmg", "emulator"]
categories = ["emulators"]
license = "MIT"
include = [
    "/Cargo.*",
    "/LICENSE",
    "README.md",
    "/src/**/*",
]

[badges]
travis-ci = { repository = "StarlitGhost/GBOxide" }

[dependencies]
bitfield = "0.13.2"
bitflags = "1.2.1"
byteorder = "1.3.2"
clap = "2.33"
num-derive = "0.3"
num-traits = "0.2"
png = "0.15.3"
pixels = "0.0.2"
imgui-wgpu = "0.4.1"
winit = "0.20.0-alpha4"
winit_input_helper = "0.4.0-alpha4"